[package]
name = "ulys"
version = "31.0.0"
edition = "2021"
authors = ["dylanhart <dylan96hart@gmail.com>", "adriantombu <adrian@ystorian.com>"]
license = "MIT"
readme = "README.md"
description = "a Universally Unique Lexicographically Sortable Identifier implementation, with a checksum"
keywords = ["ulys", "ulid", "uuid", "sortable", "identifier"]
repository = "https://github.com/ystorian/ulys"
exclude = [".github/*", "deny.toml"]

[features]
default = []
postgres = ["dep:bytes", "dep:postgres-types"]
serde = ["dep:serde", "dep:serde_derive", "dep:uuid"]
uuid = ["dep:uuid"]

[dependencies]
base32 = "0.5"
bytes = { version = "1.0", optional = true }
postgres-types = { version = "0.2", optional = true }
rand = "0.8"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
uuid = { version = "1.10", optional = true }
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
