[package]
name = "ulys"
version = "31.0.1"
edition = "2021"
authors = [
	"dylanhart <dylan96hart@gmail.com>",
	"adriantombu <adrian+ulys@ystorian.com>",
	"cyann <flavien+ulys@ystorian.com",
]
license = "MIT"
readme = "README.md"
description = "a Universally Unique Lexicographically Sortable Identifier implementation, with a checksum"
keywords = ["ulys", "ulid", "uuid", "sortable", "identifier"]
repository = "https://github.com/ystorian/ulys"
exclude = [
	".github/*",
	".just/*",
	".vscode/*",
	".editorconfig",
	".markdownlint.json",
	"deny.toml",
	"justfile",
]

[features]
default = []
postgres = ["dep:bytes", "dep:postgres-types"]
serde = ["dep:serde", "dep:serde_derive", "dep:uuid"]
uuid = ["dep:uuid"]

[dependencies]
base32 = "0.5"
bytes = { version = "1.0", optional = true }
postgres-types = { version = "0.2", optional = true }
rand = "0.10"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
uuid = { version = "1.10", optional = true }
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

# Profile for GitHub action, used by .github/workflows/rust.yaml
[profile.ci]
inherits = "dev"
debug = false
incremental = false
opt-level = 0

[profile.ci.package."*"]
debug = false
incremental = false
opt-level = 0
